Animation bug fixed. Discovered .dropdown had a z-index of 2

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -4,7 +4,6 @@
   padding: 0;
 }
 .dropdown {
-  z-index: 2;
   position: absolute;
   left: 25px;
   cursor: pointer;
@@ -29,7 +28,7 @@
   align-items: center;
   margin-top: 10px;
   border: 2.5px solid #931d25;
-  z-index: -1;
+  z-index: -1000;
 }
 .dropdown .dropdown-link {
   width: 100%;
